Admin: video exclusivity toggle endpoint (91/91 green)
